proyectoFLenguajes/pynumsParser.py
# Generated from pynums.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pynumsParser ( Parser ):

    grammarFileName = "pynums.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'.append('", "')'", "'.remove('", 
                     "':'", "'{'", "'}'", "'write_csv'", "'('", "','", "'graf'", 
                     "'read_csv'", "'..'", "'.split'", "'['", "']'", "'*'", 
                     "'/'", "'%'", "'+'", "'-'", "'^'", "<INVALID>", "'sqrt'", 
                     "<INVALID>", "<INVALID>", "'def'", "'return'", "'if'", 
                     "'elif'", "'else'", "'for'", "'while'", "'print'", 
                     "'read_file'", "'write_file'", "'append_file'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "MUL", "DIV", "MOD", "ADD", "SUB", "POW", 
                      "BOOL", "SQRT", "TRIG", "COMP", "DEF", "RETURN", "IF", 
                      "ELIF", "ELSE", "FOR", "WHILE", "PRINT", "FILE_READ", 
                      "FILE_WRITE", "FILE_APPEND", "STR", "ID", "INT", "FLOAT", 
                      "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_modArray = 2
    RULE_if_statement = 3
    RULE_csv = 4
    RULE_graficar = 5
    RULE_read1csv = 6
    RULE_elif_statement = 7
    RULE_else_statement = 8
    RULE_for_statement = 9
    RULE_range_expr = 10
    RULE_while_statement = 11
    RULE_print_statement = 12
    RULE_func_def = 13
    RULE_return_stat = 14
    RULE_params = 15
    RULE_file_op = 16
    RULE_read = 17
    RULE_args = 18
    RULE_expr = 19
    RULE_split = 20
    RULE_func_call1 = 21
    RULE_list_expr = 22
    RULE_matrix_expr = 23

    ruleNames =  [ "prog", "stat", "modArray", "if_statement", "csv", "graficar", 
                   "read1csv", "elif_statement", "else_statement", "for_statement", 
                   "range_expr", "while_statement", "print_statement", "func_def", 
                   "return_stat", "params", "file_op", "read", "args", "expr", 
                   "split", "func_call1", "list_expr", "matrix_expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    MUL=17
    DIV=18
    MOD=19
    ADD=20
    SUB=21
    POW=22
    BOOL=23
    SQRT=24
    TRIG=25
    COMP=26
    DEF=27
    RETURN=28
    IF=29
    ELIF=30
    ELSE=31
    FOR=32
    WHILE=33
    PRINT=34
    FILE_READ=35
    FILE_WRITE=36
    FILE_APPEND=37
    STR=38
    ID=39
    INT=40
    FLOAT=41
    NEWLINE=42
    WS=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pynumsParser.StatContext)
            else:
                return self.getTypedRuleContext(pynumsParser.StatContext,i)


        def getRuleIndex(self):
            return pynumsParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = pynumsParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.stat()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8792799484672) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pynumsParser.RULE_stat

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BlankContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(pynumsParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlank" ):
                listener.enterBlank(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlank" ):
                listener.exitBlank(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlank" ):
                return visitor.visitBlank(self)
            else:
                return visitor.visitChildren(self)


    class FileCSVContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def csv(self):
            return self.getTypedRuleContext(pynumsParser.CsvContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileCSV" ):
                listener.enterFileCSV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileCSV" ):
                listener.exitFileCSV(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileCSV" ):
                return visitor.visitFileCSV(self)
            else:
                return visitor.visitChildren(self)


    class FunctionDefinitionContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func_def(self):
            return self.getTypedRuleContext(pynumsParser.Func_defContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)


    class GraficaContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def graficar(self):
            return self.getTypedRuleContext(pynumsParser.GraficarContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGrafica" ):
                listener.enterGrafica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGrafica" ):
                listener.exitGrafica(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGrafica" ):
                return visitor.visitGrafica(self)
            else:
                return visitor.visitChildren(self)


    class ModificarArrayContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def modArray(self):
            return self.getTypedRuleContext(pynumsParser.ModArrayContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModificarArray" ):
                listener.enterModificarArray(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModificarArray" ):
                listener.exitModificarArray(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModificarArray" ):
                return visitor.visitModificarArray(self)
            else:
                return visitor.visitChildren(self)


    class ForStatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def for_statement(self):
            return self.getTypedRuleContext(pynumsParser.For_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStatement" ):
                return visitor.visitForStatement(self)
            else:
                return visitor.visitChildren(self)


    class IfStatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def if_statement(self):
            return self.getTypedRuleContext(pynumsParser.If_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStatement" ):
                return visitor.visitIfStatement(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def return_stat(self):
            return self.getTypedRuleContext(pynumsParser.Return_statContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStatement" ):
                return visitor.visitReturnStatement(self)
            else:
                return visitor.visitChildren(self)


    class WhileStatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def while_statement(self):
            return self.getTypedRuleContext(pynumsParser.While_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStatement" ):
                return visitor.visitWhileStatement(self)
            else:
                return visitor.visitChildren(self)


    class PrintStatementContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def print_statement(self):
            return self.getTypedRuleContext(pynumsParser.Print_statementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStatement" ):
                listener.enterPrintStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStatement" ):
                listener.exitPrintStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStatement" ):
                return visitor.visitPrintStatement(self)
            else:
                return visitor.visitChildren(self)


    class FunctionCallContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def func_call1(self):
            return self.getTypedRuleContext(pynumsParser.Func_call1Context,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionCall" ):
                listener.enterFunctionCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionCall" ):
                listener.exitFunctionCall(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionCall" ):
                return visitor.visitFunctionCall(self)
            else:
                return visitor.visitChildren(self)


    class FileOperationContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def file_op(self):
            return self.getTypedRuleContext(pynumsParser.File_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFileOperation" ):
                listener.enterFileOperation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFileOperation" ):
                listener.exitFileOperation(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFileOperation" ):
                return visitor.visitFileOperation(self)
            else:
                return visitor.visitChildren(self)


    class PrintExprContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(pynumsParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(pynumsParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)


    class AssignContext(StatContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.StatContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pynumsParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(pynumsParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(pynumsParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)



    def stat(self):

        localctx = pynumsParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 74
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = pynumsParser.PrintExprContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.expr(0)
                self.state = 54
                self.match(pynumsParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = pynumsParser.AssignContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(pynumsParser.ID)
                self.state = 57
                self.match(pynumsParser.T__0)
                self.state = 58
                self.expr(0)
                self.state = 60
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 59
                    self.match(pynumsParser.NEWLINE)


                pass

            elif la_ == 3:
                localctx = pynumsParser.BlankContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 62
                self.match(pynumsParser.NEWLINE)
                pass

            elif la_ == 4:
                localctx = pynumsParser.IfStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.if_statement()
                pass

            elif la_ == 5:
                localctx = pynumsParser.ForStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 64
                self.for_statement()
                pass

            elif la_ == 6:
                localctx = pynumsParser.WhileStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 65
                self.while_statement()
                pass

            elif la_ == 7:
                localctx = pynumsParser.PrintStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 66
                self.print_statement()
                pass

            elif la_ == 8:
                localctx = pynumsParser.FunctionDefinitionContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 67
                self.func_def()
                pass

            elif la_ == 9:
                localctx = pynumsParser.FunctionCallContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 68
                self.func_call1()
                pass

            elif la_ == 10:
                localctx = pynumsParser.ReturnStatementContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 69
                self.return_stat()
                pass

            elif la_ == 11:
                localctx = pynumsParser.FileOperationContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 70
                self.file_op()
                pass

            elif la_ == 12:
                localctx = pynumsParser.FileCSVContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 71
                self.csv()
                pass

            elif la_ == 13:
                localctx = pynumsParser.GraficaContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 72
                self.graficar()
                pass

            elif la_ == 14:
                localctx = pynumsParser.ModificarArrayContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 73
                self.modArray()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModArrayContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pynumsParser.RULE_modArray

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AppendContext(ModArrayContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.ModArrayContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pynumsParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(pynumsParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAppend" ):
                listener.enterAppend(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAppend" ):
                listener.exitAppend(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAppend" ):
                return visitor.visitAppend(self)
            else:
                return visitor.visitChildren(self)


    class RemoveContext(ModArrayContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.ModArrayContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(pynumsParser.ID, 0)
        def expr(self):
            return self.getTypedRuleContext(pynumsParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRemove" ):
                listener.enterRemove(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRemove" ):
                listener.exitRemove(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRemove" ):
                return visitor.visitRemove(self)
            else:
                return visitor.visitChildren(self)



    def modArray(self):

        localctx = pynumsParser.ModArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_modArray)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                localctx = pynumsParser.AppendContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 76
                self.match(pynumsParser.ID)
                self.state = 77
                self.match(pynumsParser.T__1)
                self.state = 78
                self.expr(0)
                self.state = 79
                self.match(pynumsParser.T__2)
                pass

            elif la_ == 2:
                localctx = pynumsParser.RemoveContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(pynumsParser.ID)
                self.state = 82
                self.match(pynumsParser.T__3)
                self.state = 83
                self.expr(0)
                self.state = 84
                self.match(pynumsParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(pynumsParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(pynumsParser.ExprContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pynumsParser.StatContext)
            else:
                return self.getTypedRuleContext(pynumsParser.StatContext,i)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(pynumsParser.NEWLINE)
            else:
                return self.getToken(pynumsParser.NEWLINE, i)

        def elif_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pynumsParser.Elif_statementContext)
            else:
                return self.getTypedRuleContext(pynumsParser.Elif_statementContext,i)


        def else_statement(self):
            return self.getTypedRuleContext(pynumsParser.Else_statementContext,0)


        def getRuleIndex(self):
            return pynumsParser.RULE_if_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_statement" ):
                listener.enterIf_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_statement" ):
                listener.exitIf_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_statement" ):
                return visitor.visitIf_statement(self)
            else:
                return visitor.visitChildren(self)




    def if_statement(self):

        localctx = pynumsParser.If_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_if_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(pynumsParser.IF)
            self.state = 89
            self.expr(0)
            self.state = 90
            self.match(pynumsParser.T__4)
            self.state = 91
            self.match(pynumsParser.T__5)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.stat()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 8792799484672) != 0)):
                    break

            self.state = 97
            self.match(pynumsParser.T__6)
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    self.match(pynumsParser.NEWLINE) 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 104
                self.elif_statement()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 110
                    self.match(pynumsParser.NEWLINE) 
                self.state = 115
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 116
                self.else_statement()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CsvContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pynumsParser.RULE_csv

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReadCSVContext(CsvContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.CsvContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def read1csv(self):
            return self.getTypedRuleContext(pynumsParser.Read1csvContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadCSV" ):
                listener.enterReadCSV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadCSV" ):
                listener.exitReadCSV(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadCSV" ):
                return visitor.visitReadCSV(self)
            else:
                return visitor.visitChildren(self)


    class WriteCSVContext(CsvContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pynumsParser.CsvContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STR(self):
            return self.getToken(pynumsParser.STR, 0)
        def expr(self):
            return self.getTypedRuleContext(pynumsParser.ExprContext,0)

        def NEWLINE(self):
            return self.getToken(pynumsParser.NEWLINE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWriteCSV" ):
                listener.enterWriteCSV(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWriteCSV" ):
                listener.exitWriteCSV(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWriteCSV" ):
                return visitor.visitWriteCSV(self)
            else:
                return visitor.visitChildren(self)



    def csv(self):

        localctx = pynumsParser.CsvContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_csv)
        try:
            self.state = 128
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [12]:
                localctx = pynumsParser.ReadCSVContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.read1csv()
                pass
            elif token in [8]:
                localctx = pynumsParser.WriteCSVContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(pynumsParser.T__7)
                self.state = 121
                self.match(pynumsParser.T__8)
                self.state = 122
                self.match(pynumsParser.STR)
                self.state = 123
                self.match(pynumsParser.T__9)
                self.state = 124
                self.expr(0)
                self.state = 125
                self.match(pynumsParser.T__2)
                self.state = 126
                self.match(pynumsParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GraficarContext(ParserRuleContext):
        __slots__ = 'parser'
